@@ -1,0 +1,9 @@
+#include "windowsvistadetectedimpl.h"
+//
+WindowsVistaDetectedImpl::WindowsVistaDetectedImpl( QWidget * parent, Qt::WFlags f) 
+	: QDialog(parent, f)
+{
+	setupUi(this);
+}
+//
+
