@@ -79,6 +79,7 @@ Q_OBJECT
 		int mainWindowHeight;			//!< Main window height
 		int mainWindowWidth;			//!< Main window width
 		bool mainWinowMaximized;		//!< Flag for know if the main window should be maximized
+		bool vistaUpdatesMessage;		//!< Flag for know if we won't see the attention message of vista (updates)
 
 		QDir appDir;			//!< Initial program path
 		QString appExecutable;	//!< Executable program path
@@ -173,6 +174,8 @@ Q_OBJECT
 		int getMainWindowWidth();
 		void setMainWinowMaximized(bool value);
 		bool getMainWinowMaximized();
+		void setVistaUpdatesMessage(bool value);
+		bool getVistaUpdatesMessage();
 	signals:
 		/*! Options will load the configuration */
 		void optionsLoadBefore();
