@@ -1,0 +1,212 @@
+<ui version="4.0" >
+ <class>WindowsVistaDetected</class>
+ <widget class="QDialog" name="WindowsVistaDetected" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>492</width>
+    <height>396</height>
+   </rect>
+  </property>
+  <property name="minimumSize" >
+   <size>
+    <width>492</width>
+    <height>396</height>
+   </size>
+  </property>
+  <property name="maximumSize" >
+   <size>
+    <width>492</width>
+    <height>396</height>
+   </size>
+  </property>
+  <property name="windowTitle" >
+   <string>Update center - Windows Vista detected</string>
+  </property>
+  <layout class="QGridLayout" name="gridLayout" >
+   <item row="0" column="0" >
+    <widget class="QFrame" name="frame" >
+     <property name="minimumSize" >
+      <size>
+       <width>0</width>
+       <height>114</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string notr="true" >QFrame{background: white;} </string>
+     </property>
+     <property name="frameShape" >
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Plain</enum>
+     </property>
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <widget class="QLabel" name="imgVista" >
+        <property name="maximumSize" >
+         <size>
+          <width>110</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text" >
+         <string/>
+        </property>
+        <property name="pixmap" >
+         <pixmap resource="../resources/resources.qrc" >:/winvistamsg/images/windows_security.png</pixmap>
+        </property>
+        <property name="alignment" >
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QLabel" name="lblTitle" >
+        <property name="text" >
+         <string>&lt;p>&lt;b>Attention, xVST detected you are running Windows Vista and automatic updates may not work properly.&lt;/b>&lt;/p>&lt;p>If you have the &lt;b>UAC&lt;/b> (User Account Control) enabled, the automatic updates won't install the downloaded updates due to user permissions.&lt;/p></string>
+        </property>
+        <property name="wordWrap" >
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="lblHowTo" >
+     <property name="text" >
+      <string>To solve this problem, we recommend you to run the xVST as administrator (right click over xVST icon -> Run as Administrator) only when you want install new versions using the Update center.</string>
+     </property>
+     <property name="wordWrap" >
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QLabel" name="imgVistaHowTo" >
+     <property name="minimumSize" >
+      <size>
+       <width>474</width>
+       <height>168</height>
+      </size>
+     </property>
+     <property name="maximumSize" >
+      <size>
+       <width>474</width>
+       <height>168</height>
+      </size>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="pixmap" >
+      <pixmap resource="../resources/resources.qrc" >:/winvistamsg/images/howto_vistaadmin.png</pixmap>
+     </property>
+     <property name="alignment" >
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" >
+    <widget class="Line" name="line" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" >
+    <layout class="QHBoxLayout" name="horizontalLayout" >
+     <item>
+      <widget class="QCheckBox" name="chbDontDisplay" >
+       <property name="text" >
+        <string>Don't display this message again</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0" >
+        <size>
+         <width>73</width>
+         <height>22</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnContinue" >
+       <property name="minimumSize" >
+        <size>
+         <width>100</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="text" >
+        <string>Continue...</string>
+       </property>
+       <property name="default" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnCancel" >
+       <property name="minimumSize" >
+        <size>
+         <width>100</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="text" >
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <resources>
+  <include location="../resources/resources.qrc" />
+ </resources>
+ <connections>
+  <connection>
+   <sender>btnContinue</sender>
+   <signal>clicked()</signal>
+   <receiver>WindowsVistaDetected</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>375</x>
+     <y>379</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>430</x>
+     <y>288</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnCancel</sender>
+   <signal>clicked()</signal>
+   <receiver>WindowsVistaDetected</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>414</x>
+     <y>373</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>431</x>
+     <y>326</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+</ui>
