@@ -22,7 +22,8 @@ FORMS = ui/addvideo.ui \
  ui/updatecenter.ui \
  ui/infoview.ui \
  ui/bugreport.ui \
- ui/credits.ui
+ ui/credits.ui \
+ ui/winvistaupdatesmsg.ui
 HEADERS = src/forms/addvideoimpl.h \
  src/forms/checkupdatesimpl.h \
  src/forms/completedpopupimpl.h \
@@ -51,7 +52,8 @@ HEADERS = src/forms/addvideoimpl.h \
  src/videoitem.h \
  src/videolistcontroller.h \
  src/trackerreport.h \
- src/xprogressbar.h
+ src/xprogressbar.h \
+ src/forms/windowsvistadetectedimpl.h
 SOURCES = src/forms/addvideoimpl.cpp \
  src/forms/checkupdatesimpl.cpp \
  src/forms/completedpopupimpl.cpp \
@@ -80,7 +82,8 @@ SOURCES = src/forms/addvideoimpl.cpp \
  src/videoitem.cpp \
  src/videolistcontroller.cpp \
  src/trackerreport.cpp \
- src/xprogressbar.cpp
+ src/xprogressbar.cpp \
+ src/forms/windowsvistadetectedimpl.cpp
 TRANSLATIONS = resources/translations/xVST_ca.ts \
  resources/translations/xVST_es.ts \
  resources/translations/xVST_pl.ts \
