@@ -13,6 +13,11 @@
 
 - Updated french language
 
+Windows Vista:
+--------------
+
+- Added detection of Windows Vista for advertise about "administrator permission"
+
 1.8.2a:
 -------
 
